--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AspenTravel</string>
+    <string name="maps_api_key">AIzaSyDlHyTNNLkg3K4KzeVqnAxSRCbeEcVzOag</string>
 </resources>
