--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,58 @@
 <resources>
     <string name="app_name">AspenTravel</string>
     <string name="maps_api_key">AIzaSyDlHyTNNLkg3K4KzeVqnAxSRCbeEcVzOag</string>
+
+    <string-array name="countries">
+        <item>Argentina</item>
+        <item>Australia</item>
+        <item>Austria</item>
+        <item>Azerbaijan</item>
+        <item>Brazil</item>
+        <item>Canada</item>
+        <item>Chile</item>
+        <item>China</item>
+        <item>Colombia</item>
+        <item>Croatia</item>
+        <item>Czech Republic</item>
+        <item>Denmark</item>
+        <item>Egypt</item>
+        <item>France</item>
+        <item>Germany</item>
+        <item>Greece</item>
+        <item>Iceland</item>
+        <item>India</item>
+        <item>Indonesia</item>
+        <item>Ireland</item>
+        <item>Italy</item>
+        <item>Japan</item>
+        <item>Kenya</item>
+        <item>Malaysia</item>
+        <item>Mexico</item>
+        <item>Morocco</item>
+        <item>Netherlands</item>
+        <item>New Zealand</item>
+        <item>Norway</item>
+        <item>Peru</item>
+        <item>Portugal</item>
+        <item>South Africa</item>
+        <item>South Korea</item>
+        <item>Spain</item>
+        <item>Sweden</item>
+        <item>Switzerland</item>
+        <item>Thailand</item>
+        <item>Turkey</item>
+        <item>United Kingdom</item>
+        <item>United States</item>
+        <item>Vietnam</item>
+    </string-array>
+
+    <string-array name="budget">
+        <item>200$ - 300$</item>
+        <item>300$ - 500$</item>
+        <item>500$ - 700$</item>
+        <item>700$ - 1000$</item>
+        <item>1000$ - 1300$</item>
+        <item>1300$ - 1600$</item>
+    </string-array>
+
 </resources>
